--- a/src/main.scss
+++ b/src/main.scss
@@ -14,16 +14,16 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     height: 100%;
 
     display: grid;
-    grid-template-columns: [editor-start] 400px [editor-end toolbar-start map-start] auto [toolbar-end map-end];
-    grid-template-rows: [editor-start map-start] auto [toolbar-start] 48px [editor-end toolbar-end map-end];
+    grid-template-columns: [editor-start] 400px [editor-end statusbar-start map-start] auto [statusbar-end map-end];
+    grid-template-rows: [editor-start map-start] auto [statusbar-start] 48px [editor-end statusbar-end map-end];
 
     @media (max-width: $wideBreakpoint) {
-        grid-template-columns: [editor-start] $relativeEditorWidth * 100% [editor-end toolbar-start map-start] auto [toolbar-end map-end];
+        grid-template-columns: [editor-start] $relativeEditorWidth * 100% [editor-end statusbar-start map-start] auto [statusbar-end map-end];
     }
 
     @media (max-width: $compactBreakpoint) {
-        grid-template-columns: [editor-start toolbar-start map-start] auto [editor-end toolbar-end map-end];
-        grid-template-rows: [editor-start] fit-content(60%) [editor-end map-start] auto [toolbar-start] 48px [map-end toolbar-end];
+        grid-template-columns: [editor-start statusbar-start map-start] auto [editor-end statusbar-end map-end];
+        grid-template-rows: [editor-start] fit-content(60%) [editor-end map-start] auto [statusbar-start] 48px [map-end statusbar-end];
     }
 }
 
@@ -86,8 +86,8 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     justify-self: end;
 }
 
-.mapview-toolbar {
-    grid-area: toolbar;
+.mapview-statusbar {
+    grid-area: statusbar;
 
     z-index: 1;
 
@@ -98,7 +98,7 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     border-top: 1px solid rgba(0, 0, 0, 0.1); 
 }
 
-.mapview-toolbar-progress-bar {
+.mapview-statusbar-progress-bar {
     position: absolute;
     bottom: 100%;
     left: 0;
