Move new waypoint field out of waypoint list

--- a/src/main.scss
+++ b/src/main.scss
@@ -50,7 +50,7 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     }
 }
 
-#waypoint-editor-button-bar {
+#waypoint-editor-footer {
     width: 100%;
     position: sticky;
     bottom: 0;
