Increase maximum waypoint editor width

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-$maxEditorWidth: 400px;
+$maxEditorWidth: 480px;
 $minEditorWidth: 300px;
 $minMapWidth: 300px;
 $statusbarHeight: 48px;
@@ -15,8 +15,8 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     height: 100%;
 
     display: grid;
-    grid-template-columns: [editor-start] 400px [editor-end statusbar-start map-start] auto [statusbar-end map-end];
-    grid-template-rows: [editor-start map-start] auto [statusbar-start] 48px [editor-end statusbar-end map-end];
+    grid-template-columns: [editor-start] $maxEditorWidth [editor-end statusbar-start map-start] auto [statusbar-end map-end];
+    grid-template-rows: [editor-start map-start] auto [statusbar-start] $statusbarHeight [editor-end statusbar-end map-end];
 
     @media (max-width: $wideBreakpoint) {
         grid-template-columns: [editor-start] $relativeEditorWidth * 100% [editor-end statusbar-start map-start] auto [statusbar-end map-end];
@@ -24,7 +24,7 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
 
     @media (max-width: $compactBreakpoint) {
         grid-template-columns: [editor-start statusbar-start map-start] auto [editor-end statusbar-end map-end];
-        grid-template-rows: [editor-start] fit-content(60%) [editor-end map-start] auto [statusbar-start] 48px [map-end statusbar-end];
+        grid-template-rows: [editor-start] fit-content(60%) [editor-end map-start] auto [statusbar-start] $statusbarHeight [map-end statusbar-end];
     }
 }
 
