--- a/src/main.scss
+++ b/src/main.scss
@@ -1,12 +1,9 @@
-$maxEditorWidth: 480px;
-$minEditorWidth: 300px;
-$minMapWidth: 300px;
+$editorWidth: 420px;
+$minMapWidth: 400px;
 $statusbarHeight: 48px;
 $frostedBlurRadius: 258px;
 
-$relativeEditorWidth: $minEditorWidth / ($minEditorWidth + $minMapWidth);
-$compactBreakpoint: $minEditorWidth + $minMapWidth;
-$wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
+$compactBreakpoint: $editorWidth + $minMapWidth;
 
 #root {
     left: 0;
@@ -17,12 +14,8 @@ $wideBreakpoint: $maxEditorWidth / $relativeEditorWidth;
     user-select: none;
 
     display: grid;
-    grid-template-columns: [editor-start] $maxEditorWidth [editor-end statusbar-start map-start] auto [statusbar-end map-end];
+    grid-template-columns: [editor-start] $editorWidth [editor-end statusbar-start map-start] auto [statusbar-end map-end];
     grid-template-rows: [editor-start map-start] auto [statusbar-start] $statusbarHeight [editor-end statusbar-end map-end];
-
-    @media (max-width: $wideBreakpoint) {
-        grid-template-columns: [editor-start] $relativeEditorWidth * 100% [editor-end statusbar-start map-start] auto [statusbar-end map-end];
-    }
 
     @media (max-width: $compactBreakpoint) {
         grid-template-columns: [editor-start statusbar-start map-start] auto [editor-end statusbar-end map-end];
