Deprecate form-control CSS class

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -52,7 +52,7 @@ html {
     }
 }
 
-.form-control {
+input, textarea {
     border: none;
     padding: $standardPadding;
     border-radius: $standardBorderRadius;
