--- a/client/src/styles/_btn.scss
+++ b/client/src/styles/_btn.scss
@@ -2,45 +2,73 @@
 @import './mixins.scss';
 
 .btn {
+    --local-btn-background-color: transparent;
+    --local-btn-text-color: white;
+
     padding: $standardPadding;
-    color: white;
     border-radius: $standardBorderRadius;
     @include bordered();
 
     line-height: 1.5;
 
+    background-color: var(--local-btn-background-color);
+
+    color: var(--local-btn-text-color);
+
+    transition: transform .1s;
+
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+        content: '';
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        transition: background-color .1s;
+    }
+
     &:enabled {
         cursor: pointer;
-    }
 
-    &:enabled {
-        &:hover {
-            filter: brightness(1.1) saturate(1.1);
+        &:hover::after {
+            background-color: var(--app-button-hover-highlight-color);
         }
 
-        &:focus, &:active {
-            filter: brightness(0.9) saturate(0.9);
+        &:active::after {
+            background-color: var(--app-button-active-highlight-color);
+        }
+
+        &:active {
+            transform: scale(0.98);
         }
     }
 
-    &:disabled, &:disabled:hover {
+    &:disabled {
         opacity: 0.65;
     }
 }
 
 .btn-primary {
-    background-color: var(--apple-system-blue);
+    --local-btn-background-color: var(--apple-system-blue);
+    --local-btn-text-color: white;
 }
 
 .btn-secondary {
-    background-color: var(--apple-system-gray);
+    --local-btn-background-color: var(--apple-system-gray);
+    --local-btn-text-color: white;
 }
 
 .btn-danger {
-    background-color: var(--apple-system-red);
+    --local-btn-background-color: var(--apple-system-red);
+    --local-btn-text-color: white;
 }
 
 .btn-warning {
-    background-color: var(--apple-system-yellow);
-    color: rgba(0, 0, 0, 0.6);
+    --local-btn-background-color: var(--apple-system-yellow);
+    --local-btn-text-color: rgba(0, 0, 0, 0.6);
 }
