--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -21,6 +21,8 @@
     --app-frost-color: rgba(255, 255, 255, 0.5);
     --app-frost-fallback-color: rgba(255, 255, 255, 0.9);
     --app-input-row-span-color: rgba(255, 255, 255, 0.5);
+    --app-button-hover-highlight-color: rgba(0, 0, 0, 0.1);
+    --app-button-active-highlight-color: rgba(0, 0, 0, 0.2);
 
     @media (prefers-color-scheme: dark) {
        // Apple System Colors
@@ -45,6 +47,8 @@
         --app-frost-color: rgba(0, 0, 0, 0.2);
         --app-frost-fallback-color: rgba(0, 0, 0, 0.9); 
         --app-input-row-span-color: rgba(255, 255, 255, 0.05);
+        --app-button-hover-highlight-color: rgba(255, 255, 255, 0.1);
+        --app-button-active-highlight-color: rgba(255, 255, 255, 0.2);
     }
 }
 
