Use prettier for global code formatting

--- a/client/src/styles/_alert.scss
+++ b/client/src/styles/_alert.scss
@@ -1,10 +1,11 @@
-@import './variables.scss';
+@import "./variables.scss";
 
 .alert {
     margin: $standardMargin;
 }
 
-.alert-info, .alert-primary  {
+.alert-info,
+.alert-primary {
     color: var(--app-secondary-text-color);
 }
 
