--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -11,7 +11,7 @@
     --apple-system-yellow: rgb(255, 204, 0);
 
     // App Colors
-    --app-background-color: white;
+    --app-background-color: rgb(192, 192, 192);
     --app-primary-text-color: rgba(0, 0, 0, 0.8);
     --app-secondary-text-color: rgba(0, 0, 0, 0.5);
     --app-form-control-color: rgba(0, 0, 0, 0.05);
