Improve appearance of buttons
Remove shrink effect on click. Also remove outline added by some
browsers on focus.

--- a/client/src/styles/_btn.scss
+++ b/client/src/styles/_btn.scss
@@ -42,10 +42,10 @@
         &:active::after {
             background-color: var(--app-button-active-highlight-color);
         }
+    }
 
-        &:active {
-            transform: scale(0.98);
-        }
+    &:focus {
+        outline: none;
     }
 
     &:disabled {
