Add a transition when enabling/disabling buttons

--- a/client/src/styles/_btn.scss
+++ b/client/src/styles/_btn.scss
@@ -15,7 +15,7 @@
 
     color: var(--local-btn-text-color);
 
-    transition: transform 0.1s;
+    transition: transform 0.1s, opacity 0.1s;
 
     position: relative;
     overflow: hidden;
