--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -244,13 +244,42 @@ a:hover {
 
 #map-buttons {
     position: absolute;
-    top: $standardMargin / 2;
-    right: $standardMargin;
+    top: 0;
+    left: $editorWidth + $standardMargin;
+    padding: $standardMargin;
+
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+
+    display: flex;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    @media (max-width: $compactBreakpoint) {
+        top: initial;
+        left: 0;
+        bottom: 0;
+
+        #root:not(.editor-hidden) & {
+            display: none;
+        }
+    }
+
+    #root.editor-hidden & {
+        left: 0;
+    }
 
     & > button {
-        float: right;
-        margin-left: $standardMargin / 2;
-        margin-top: $standardMargin / 2;
+        flex-shrink: 0;
+        margin-right: $standardMargin / 2;
+    }
+}
+
+.hide-editor-button {
+    @media (min-width: $compactBreakpoint) {
+        visibility: hidden;
     }
 }
 
