Replace mixins with inline code
Mixins added an unnecessary layer of complexity. Also allows more specific
CSS selectors (e.g '.frosted .frosted').

--- a/client/src/styles/_btn.scss
+++ b/client/src/styles/_btn.scss
@@ -1,5 +1,4 @@
 @import "./variables.scss";
-@import "./mixins.scss";
 
 .btn {
     --local-btn-background-color: transparent;
@@ -7,7 +6,7 @@
 
     padding: $standardPadding;
     border-radius: $standardBorderRadius;
-    @include bordered();
+    border: 1px solid var(--app-border-color);
 
     line-height: 1.5;
 
