--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -45,7 +45,7 @@
         --app-border-color: rgba(255, 255, 255, 0.1);
         --app-heavy-border-color: rgba(255, 255, 255, 0.1);
         --app-frost-color: rgba(0, 0, 0, 0.2);
-        --app-frost-fallback-color: rgba(0, 0, 0, 0.9);
+        --app-frost-fallback-color: rgb(32, 32, 32, 0.9);
         --app-input-row-span-color: rgba(255, 255, 255, 0.05);
         --app-button-hover-highlight-color: rgba(255, 255, 255, 0.1);
         --app-button-active-highlight-color: rgba(255, 255, 255, 0.2);
