Darken body text colors

--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -12,7 +12,7 @@
 
     // App Colors
     --app-background-color: rgb(224, 224, 224);
-    --app-primary-text-color: rgba(0, 0, 0, 0.8);
+    --app-primary-text-color: rgb(0, 0, 0);
     --app-secondary-text-color: rgba(0, 0, 0, 0.5);
     --app-form-control-color: rgba(0, 0, 0, 0.05);
     --app-form-control-focus-color: rgba(255, 255, 255, 0.5);
@@ -38,7 +38,7 @@
 
         // App Colors
         --app-background-color: rgb(64, 64, 64);
-        --app-primary-text-color: rgba(255, 255, 255, 0.8);
+        --app-primary-text-color: rgb(255, 255, 255);
         --app-secondary-text-color: rgba(255, 255, 255, 0.5);
         --app-form-control-color: rgba(0, 0, 0, 0.2);
         --app-form-control-focus-color: rgba(255, 255, 255, 0.05);
