--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -287,9 +287,13 @@ textarea {
     left: 0;
     top: 0;
     width: 100%;
-    height: 6px;
+    height: 8px;
     overflow: hidden;
     z-index: 4;
+
+    svg {
+        position: absolute;
+    }
 }
 
 $frostedBlurRadius: 128px;
