Remove focus ring on input row elements

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -169,6 +169,10 @@ textarea {
     & > span {
         background-color: var(--app-input-row-span-color);
         border: 1px solid var(--app-heavy-border-color);
+
+        &:focus {
+            outline: none;
+        }
     }
 
     &.waypoint-item-selected > span {
